--- a/ui_dev/Amenoma_Help_Dialog.ui
+++ b/ui_dev/Amenoma_Help_Dialog.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>400</width>
-    <height>500</height>
+    <height>550</height>
    </rect>
   </property>
   <property name="palette">
@@ -469,7 +469,8 @@ p, li { white-space: pre-wrap; }
 &lt;li style=&quot; margin-top:0px; margin-bottom:12px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;扫描结果存储在运行文件夹 &lt;br /&gt; &lt;span style=&quot; color:#517fcb;&quot;&gt;artifacts.genshinart.json&lt;/span&gt;(莫娜占卜铺)&lt;br /&gt; &lt;span style=&quot; color:#517fcb;&quot;&gt;artifacts.genmocalc.json&lt;/span&gt;(原魔计算器)&lt;br /&gt; &lt;span style=&quot; color:#517fcb;&quot;&gt;artifacts.GOOD.json&lt;/span&gt;&lt;br /&gt;(Genshin Optimizer)&lt;/li&gt;&lt;/ol&gt;
 &lt;p style=&quot; margin-top:14px; margin-bottom:12px; margin-left:20px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:large;&quot;&gt;扫描材料&lt;/span&gt;&lt;/p&gt;
 &lt;p style=&quot; margin-top:12px; margin-bottom:12px; margin-left:20px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;调整分辨率 -- 打开背包 -- 调整扫描选项 -- 开始！&lt;/p&gt;
-&lt;p style=&quot; margin-top:12px; margin-bottom:12px; margin-left:20px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;导出结果存储为&lt;br /&gt;&lt;span style=&quot; color:#517fcb;&quot;&gt;materials.GOOD.json&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+&lt;p style=&quot; margin-top:12px; margin-bottom:12px; margin-left:20px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;导出结果存储为&lt;br /&gt;&lt;span style=&quot; color:#517fcb;&quot;&gt;materials.GOOD.json&lt;/span&gt;&lt;/p&gt;
+&lt;p style=&quot; margin-top:12px; margin-bottom:12px; margin-left:20px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;详细帮助 / Q&amp;amp;A &lt;br /&gt;&lt;a href=&quot;https://github.com/daydreaming666/Amenoma#readme&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#0000ff;&quot;&gt; https://github.com/daydreaming666/Amenoma#readme &lt;/span&gt;&lt;/a&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
      </property>
     </widget>
    </item>
